[package]
name = "agent-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.0"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.8.0"
shadow-rs = "0.11.0"